Bug#10460 SHOW CREATE TABLE uses inconsistent upper/lower case